--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
     <meta content='width=device-width; height=device-height; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;' name='viewport' />
     <meta name="viewport" content="width=device-width" />
     <meta name="license" content="
-        Copyright 2013 Google, Abram Hindle
+        Copyright 2021 Google, Abram Hindle, Xichen Pan
         
         Licensed under the Apache License, Version 2.0 (the "License");
         you may not use this file except in compliance with the License.
@@ -44,18 +44,47 @@ debug("Test");
 
 world = {};
 
-//XXX: TODO Make this prettier!
-function drawCircle(context,entity) {
+// Reference: https://riptutorial.com/html5-canvas/example/18135/stars
+function drawStar(context,entity) {
     with(context) {
-        beginPath();                
+        beginPath();              
         lineWidth = 3;
         var x = entity["x"];
         var y = entity["y"];
-        //moveTo(x,y);
-        fillStyle = entity["colour"];
-        strokeStyle = fillStyle;
-        arc(x, y, (entity["radius"])?entity["radius"]:50, 0, 2.0 * Math.PI, false);  
-        stroke();                                
+        for (var i=0; i < 2*8+1; i++) {
+            var r = (entity["radius"])?entity["radius"]:60;
+            if (i%2 !== 0) {
+                r = r/2;
+            }
+            var a = Math.PI * i/8;
+            lineTo(x + r*Math.sin(a), y + r*Math.cos(a));
+        };
+        closePath();
+        fillStyle=entity["colour"];
+        strokeStyle=fillStyle;
+        fill();                              
+    }
+}
+
+// Emoji reference: https://stackoverflow.com/questions/57245470/html5-canvas-image-data-empty-after-drawing-an-emoji-with-large-font-size-on-c?rq=1
+function drawEmoji(context,entity) {
+    with(context) {
+        const text = "😀,😁,😂,😃,😄,😅,😆,😇,😉,😊,😋,😌,😍,😎,😏,😐,😑,😒,😓,😔,😕,😖,😗,😘,😙,😚,😛,😜,😝,😞,😟,😠,👹,👺,👻,👼,🚜,👾,👿,💀".split(",");
+        font = '40px serif';
+        var x = entity["x"];
+        var y = entity["y"];
+        var emoji = text[(x+y) % text.length];
+        fillText(emoji, entity["x"], entity["y"]);
+    }
+}
+
+
+//XXX: TODO Make this prettier!
+function drawShape(context,entity) {
+    if (entity["type"] === "star") {
+        drawStar(context,entity);
+    } else if (entity["type"] === "emoji") {
+        drawEmoji(context,entity);
     }
 }
 
@@ -83,7 +112,7 @@ function renderFrame() {
     clearFrame();
     for (var key in world) {
         var entity = world[key];
-        drawCircle(context,prepEntity(entity));
+        drawShape(context,prepEntity(entity));
     }
 }
 
@@ -125,6 +154,9 @@ function addEntity(entity, data) {
     world[entity] = data;
     drawNextFrame(); // (but should we?)
     //XXX: Send a XHTML Request that updates the entity you just modified!
+    msg = {};
+    msg[entity] = data;
+    socket.send(JSON.stringify(msg))
 }
 var counter = 0;
 function addEntityWithoutName(data) {
@@ -231,16 +263,16 @@ mouse = (function() {
 // Add the application specific mouse listeners!
 //XXX: TODO Make these prettier!
 mouse.mousedowners.push(function(x,y,clicked,e) {
-    addEntityWithoutName({'x':x,'y':y,'colour':'blue'});
+    addEntityWithoutName({'x':x,'y':y,'colour':'#096148','type':'star'});
 });
 
 mouse.mouseuppers.push(function(x,y,clicked,e) {
-    addEntityWithoutName({'x':x,'y':y,'colour':'red'});
+    addEntityWithoutName({'x':x,'y':y,'colour':'#81C7D4','type':'star'});
 });
 
 mouse.mousedraggers.push(function(x,y,clicked,e) {
     addEntityWithoutName({'x':x,'y':y,'colour':'green',
-                          'radius':10});
+                          'radius':10,'type':'emoji'});
 });
 
 
@@ -254,14 +286,21 @@ function wsSetup() {
     socket = new WebSocket(url);
     socket.onopen = function() {
         //XXX: TODO What are you going to do here?
+        debug("WebSocket Open");
     };
     socket.onerror = function(msg) {
         debug("WebSocket Error:" + msg.data);
     };
     socket.onmessage = function(msg) {  
+        // Reference: https://github.com/abramhindle/WebSocketsExamples/blob/master/static/chat.html
         try {
             debug("WebSocket Recv:" + msg.data);
-            //XXX: TODO What are you going to do here?            
+            //XXX: TODO What are you going to do here?   
+            var message = JSON.parse(msg.data);
+            for (let entity in message){
+                world[entity] = message[entity];
+            }
+            drawNextFrame();   
         } catch (e) {
             alert("socket on message: " + e);
         }
