--- a/static/index.html
+++ b/static/index.html
@@ -45,6 +45,8 @@ debug("Test");
 world = {};
 
 // Reference: https://riptutorial.com/html5-canvas/example/18135/stars
+// Star and emoji draw reference from my last assignment:
+// https://github.com/xichen1/CMPUT404-assignment-ajax/blob/master/static/index.html
 function drawStar(context,entity) {
     with(context) {
         beginPath();              
